# lrc

./: CMakeCache.txt  CMakeLists.txt  Makefile  client.cpp  cmake_install.cmake  coordinator.cpp  datanode.cpp
conf/: cluster.xml  configuration.xml
include/: FileSystemCN.h  FileSystemClient.h  FileSystemDN.h  MetaInfo.h  ToolBox.h  combination_generator.h  devcommon.h
include/asio/: basic_serial_port.hpp  co_spawn.hpp  execution.hpp
include/asio/impl/: src.cpp
include/erasurecoding/: CodeUtil.h  LRCCoder.h  LRCDecoder.h
src/: FileSystemCN.cpp  FileSystemClient.cpp  FileSystemDN.cpp  ToolBox.cpp  client.cpp
src/proto/: coordinator.grpc.pb.cc  coordinator.grpc.pb.h  coordinator.pb.cc  coordinator.pb.h  coordinator.proto  datanode.grpc.pb.cc  datanode.grpc.pb.h  datanode.pb.cc  datanode.pb.h  datanode.proto
test/: test.cpp
